# ben

./: .gitignore  .gitmodules  .versionrc  CHANGELOG.md  Dockerfile  Makefile  README.md  VERSION  default.conf  docker-compose.yml  dump.txt  environment.yml  human.conf  requirements.txt  resp.html  version.json
.github/workflows/: build.workflow.yml  release.workflow.yml  update_alertsdb.workflow.yml
chart/: Chart.yaml  values.prod.yaml  values.yaml
chart/templates/: deployment.yaml  fullboard.yaml  hpa.yaml  service.yaml
docker/: entrypoint.sh
examples/: alert_bid.json  alert_bid_1.json  alert_bid_2.json  make_lead.json  numpy_readonly.json  place_bid.json  place_bid_1.json  play_card.json  play_card_1.json  play_card_2.json
loadtest/: README.md  pyproject.toml
loadtest/loadtest/: command.py  play_card.py
models/human2/: bidding-2000000.index
src/: Board.py  Deal.py  DealRecord.py  FullBoardCardPlayer.py  FullBoardPlayer.py  PlayRecord.py  Sequence.py  SequenceAtom.py  alert_database  alert_database_1.sqlite  alert_database_creation_script.py  alert_utils.py  alerting.py  analysis.py  api.py  binary.py  bot_action.py  bots.py  claim_dds.py  conf.py  create_alerts_database.py  create_database.py  dev_alert_database  dev_alerts  game.py  gameserver.py  generate_alerts.py  health_checker.py  human_carding.py  meta_tests.py  objects.py  parsing_tools.py  play_card_pre_process.py  sample.py  sample_analyze.py  score_calculation.py  send_bunch_of_json.py  starlette_api.py  table_manager_client.py  tests.py  (+3 more)
src/ben_pre_formatting/: PlayRecord.py  utils.py  (+1 more)
(+22 files in other folders)
