[tool.poetry]
name = "loadtest"
version = "0.1.0"
description = ""
authors = ["Zhivko Draganov <zhivko.draganov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
